--- a/app/src/main/res/layout/studuy.xml
+++ b/app/src/main/res/layout/studuy.xml
@@ -10,4 +10,8 @@
         android:text="study"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:text="study"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </android.support.constraint.ConstraintLayout>
